@@ -4940,7 +4940,6 @@ static const struct bfd_elf_special_section
 #define elf_backend_hash_symbol \
   elf_x86_64_hash_symbol
 
-#undef  elf_backend_post_process_headers
 #define elf_backend_post_process_headers  _bfd_elf_set_osabi
 
 #include "elf64-target.h"
@@ -4957,8 +4956,6 @@ static const struct bfd_elf_special_section
 
 #undef  elf64_bed
 #define elf64_bed elf64_x86_64_fbsd_bed
-
-#undef  elf_backend_post_process_headers
 
 #include "elf64-target.h"
 
@@ -5018,9 +5015,6 @@ elf64_l1om_elf_object_p (bfd *abfd)
 #undef elf_backend_object_p
 #define elf_backend_object_p		    elf64_l1om_elf_object_p
 
-#undef  elf_backend_post_process_headers
-#define elf_backend_post_process_headers    _bfd_elf_set_osabi
-
 #undef  elf_backend_static_tls_alignment
 
 #undef elf_backend_want_plt_sym
@@ -5040,8 +5034,6 @@ elf64_l1om_elf_object_p (bfd *abfd)
 
 #undef  elf64_bed
 #define elf64_bed elf64_l1om_fbsd_bed
-
-#undef  elf_backend_post_process_headers
 
 #include "elf64-target.h"
 
@@ -5078,9 +5070,6 @@ elf32_x86_64_elf_object_p (bfd *abfd)
   elf_x86_64_mkobject
 
 #undef	ELF_OSABI
-
-#undef elf_backend_post_process_headers
-#define elf_backend_post_process_headers    _bfd_elf_set_osabi
 
 #undef elf_backend_object_p
 #define elf_backend_object_p \
